Fix search results overflowing on small resolutions

--- a/kikar_hamedina/static/css/he/main-he.css
+++ b/kikar_hamedina/static/css/he/main-he.css
@@ -136,3 +136,8 @@ body {
     padding-left: 2px;
     padding-right: 2px;
 }
+
+/* Fix search results overflowing on small resolutions */
+.navbar-collapse.in {
+    overflow-y: visible;
+}
